Create & use user template

--- a/web/templates/user/index.html.eex
+++ b/web/templates/user/index.html.eex
@@ -2,7 +2,7 @@
 <ul>
   <%= for user <- @users do %>
     <li>
-      <%= first_name(user) %> (<%= user.id %>) | <%= link "view", to: user_path(@conn, :show, user.id) %>
+      <%= render "user.html", user: user %> | <%= link "view", to: user_path(@conn, :show, user.id) %>
     </li>
   <% end %>
 </ul>
